# PathTracerGL

./: .gitignore  .gitmodules  CMakeLists.txt  PathTracerGL  app  glad.c  imgui.ini
PathTracerGL.dSYM/Contents/: Info.plist
PathTracerGL.dSYM/Contents/Resources/DWARF/: PathTracerGL
app.dSYM/Contents/Resources/DWARF/: app
dependencies/: CMakeLists.txt
dependencies/include/glad/: glad.h
include/: camera.h  framebuffer.h  renderer.h  scene.h  shader.h  window.h
res/shaders/: accumulation.glsl  frag.fs  frag.glsl  path_tracer.glsl  vert.glsl  vert.vs
src/: application.cpp  application.h  bvh.cpp  bvh.h  camera.cpp  camera.h  consoleLogger.cpp  consoleLogger.h  framebuffer.cpp  framebuffer.h  gui.cpp  gui.h  hdri.cpp  hdri.h  lodepng.h  main.cpp  materials.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
src/shaders/: accumulation.glsl  anyHit.glsl  bsdf.glsl  bvh.glsl  data.glsl  debug.glsl  debugVert.glsl  final_output.glsl  miss.glsl  pathTracer.glsl  path_tracer.glsl  post.glsl  postProcessing.glsl  pt.glsl  structs.glsl  tracePrims.glsl  traceRay.glsl  utils.glsl  vert.glsl
src/shaders/common/: any_hit.glsl  bsdf.glsl  closest_hit.glsl  data.glsl  intersect.glsl  miss.glsl  pbr.glsl  ray_gen.glsl  structs.glsl  uniforms.glsl  utils.glsl
